@@ -5,25 +5,29 @@ plugins {
 group = "net.swofty"
 version = "1.0"
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(25))
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation(project(":type.lobby"))
     implementation(project(":commons"))
-    implementation(project(":packer"))
     implementation(project(":proxy.api"))
     implementation(project(":type.generic"))
 
-    implementation("org.mongodb:bson:4.11.2")
-    implementation("org.mongodb:mongodb-driver-sync:4.11.2")
+    implementation("org.mongodb:bson:5.6.2")
+    implementation("org.mongodb:mongodb-driver-sync:5.6.2")
     implementation("org.tinylog:tinylog-api:2.7.0")
     implementation("org.tinylog:tinylog-impl:2.7.0")
-    implementation("net.minestom:minestom:2025.08.18-1.21.8") {
+    implementation("net.minestom:minestom:2025.12.20c-1.21.11") {
         exclude(group = "org.jboss.shrinkwrap.resolver", module = "shrinkwrap-resolver-depchain")
     }
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
 }
